# nearsend

./: .gitignore  ARCHITECTURE.md  BUILD_STATUS.md  COMPILE_CHECK.md  CURRENT_STATUS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  MIGRATION.md  README.md  UI_ALIGNMENT_PROGRESS.md  UI_COMPARISON.md  UI_IMPLEMENTATION.md  UNIMPLEMENTED_FEATURES.md  build.rs  changelog.md
platform/ohos/: build-profile.json5  code-linter.json5  oh-package.json5
platform/ohos/AppScope/: app.json5
platform/ohos/AppScope/resources/base/element/: string.json
platform/ohos/entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
platform/ohos/entry/src/main/: module.json5
platform/ohos/entry/src/main/ets/entryability/: EntryAbility.ets
platform/ohos/entry/src/main/ets/entrybackupability/: EntryBackupAbility.ets
platform/ohos/entry/src/main/ets/pages/: Index.ets
platform/ohos/entry/src/main/ets/types/libnear_send/: Index.d.ts  oh-package.json5
platform/ohos/entry/src/main/resources/base/element/: string.json
platform/ohos/entry/src/ohosTest/: module.json5
platform/ohos/entry/src/ohosTest/ets/test/: Ability.test.ets  List.test.ets
platform/ohos/hvigor/: hvigor-config.json5
src/: app.rs  app_new.rs  app_v2.rs  assets.rs  client.rs  discovery.rs  lib.rs  protocol.rs  server.rs
src/core/: async_init.rs  cert.rs  discovery.rs  mod.rs  multicast.rs  receive_events.rs  send_cancel_events.rs  send_retry_events.rs  server.rs  share_links.rs  transfer.rs
src/platform/: clipboard.rs  file_opener.rs  file_picker.rs  mod.rs  preferences_path.rs  save_file.rs
src/state/: app_state.rs  device_state.rs  history_state.rs  mod.rs  receive_inbox_state.rs  send_selection_state.rs  transfer_state.rs
src/ui/: mod.rs  router_history.rs  routes.rs  theme.rs  utils.rs
src/ui/components/: animated_crossfade.rs  animated_opacity.rs  big_button.rs  custom_icon_button.rs  device_badge.rs  device_card.rs  device_placeholder.rs  file_list.rs  history_item.rs  labeled_checkbox.rs  logo.rs  mod.rs  opacity_slideshow.rs  progress_bar.rs  responsive_wrap_view.rs  rotating_widget.rs  switch.rs  text_input.rs  transfer_item.rs
src/ui/pages/: about.rs  changelog.rs  donate.rs  history.rs  home.rs  mod.rs  progress.rs  receive.rs  receive_dialog.rs  receive_incoming.rs  receive_page.rs  selected_files.rs  send.rs  send_page.rs  settings_page.rs  web_send.rs
src/ui/pages/home/: favorites.rs  mod.rs  navigation.rs  receive_state.rs  receive_tab.rs  render.rs  runtime.rs  send_actions.rs  send_state.rs  send_tab.rs  send_transfer_flow.rs  settings_actions.rs  settings_selects.rs  settings_state.rs  settings_tab.rs
src/ui/pages/open_source_licenses/: data.rs  mod.rs  page.rs
