[package]
name = "near-send"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gpui = { git = "https://github.com/richerfu/zed.git", branch = "feat-shader" }
gpui-component = { git = "https://github.com/richerfu/gpui-component.git" }
gpui-router = { git = "https://github.com/richerfu/gpui-router.git", default-features = false }
gpui-component-assets = { git = "https://github.com/richerfu/gpui-component.git" }
openharmony-ability = { git = "https://github.com/harmony-contrib/openharmony-ability.git" }
openharmony-ability-derive = { git = "https://github.com/harmony-contrib/openharmony-ability.git" }

napi-ohos = { version = "=1.1.6" }
napi-derive-ohos = { version = "=1.1.6" }
napi-derive-backend-ohos = { version = "=1.1.6" }
ohos-hilog-binding = { version = "*", features = ["log"] }
log = { version = "*" }

# LocalSend protocol implementation - use official core from localsend/localsend
localsend = { git = "https://github.com/localsend/localsend.git", features = [
    "http",
], rev = "1a9b8280ff0a768caa1fab78647cc6b2aa849ef3" }
# localsend = { path = "../localsend/core", features = ["http"]}

# Network dependencies (still needed for some utilities)
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "http1"] }
http-body-util = "0.1"
bytes = "1"
base64 = "0.22"
tokio-rustls = "0.26"
rustls = "0.23"
if-addrs = "0.13"
socket2 = "0.6"
qrcodegen = "1.8.0"
urlencoding = "2.1.3"

[target.'cfg(target_env = "ohos")'.dependencies]
ohos-ability-access-control-binding = "0.0.1"
ohos-fileuri-binding = "0.1.0"

[build-dependencies]
napi-build-ohos = { version = "=1.1.6" }


# 强制 patch 所有来源的依赖，确保统一使用本地路径
[patch.crates-io]
blade-graphics = { git = "https://github.com/richerfu/blade.git" }
gpui = { git = "https://github.com/richerfu/zed.git", branch = "feat-shader" }


[patch."https://github.com/zed-industries/zed.git"]
gpui = { git = "https://github.com/richerfu/zed.git", branch = "feat-shader" }
